[build-system]
requires = [
        'PyYAML>=6.0',
        'bs4>=0.0.1',
        'requests>=2.22.0',
        'bibtexparser>=1.2.0',
        'Pygments>=2.11.2',
        'somef>=0.8.0',
        'scc @ git+https://github.com/oeg-upm/scc',
        'metadata-parser'
]
build-backend = "setuptools.build_meta"
